--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fast-cli": "^4.0.0",
     "fast-speedtest-api": "^0.3.2",
     "next": "15.1.3",
+    "raw-body": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "speed-test": "^3.0.0"
