--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "fast-cli": "^4.0.0",
     "fast-speedtest-api": "^0.3.2",
     "next": "15.1.3",
     "raw-body": "^3.0.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-internet-meter": "^1.1.1",
+    "react-range-slider-input": "^3.0.7",
     "speed-test": "^3.0.0"
   },
   "devDependencies": {
